syntax = "proto3";

package blog;

option go_package = "blog/proto";

message Post {
  string postId = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string publicationDate = 5;
  repeated string tags = 6;
}

message PostIdRequest {
  string postId = 1;
}

service BlogService {
  rpc CreatePost(Post) returns (Post);
  rpc ReadPost(PostIdRequest) returns (Post);
  rpc UpdatePost(Post) returns (Post);
  rpc DeletePost(PostIdRequest) returns (DeleteResponse);

  // new RPC method to retrieve all posts
  rpc ListPosts(EmptyRequest) returns (stream PostList);
}

message DeleteResponse {
  bool success = 1;
}

message EmptyRequest {}

message PostList {
  repeated Post posts = 1;
}